--- a/porsche/style.css
+++ b/porsche/style.css
@@ -271,7 +271,8 @@ a {
 
 .contactus {
     display: flex;
-    align-items: start;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
     gap: 15px;
     margin-top: 10px;
@@ -281,4 +282,17 @@ footer {
     width: 100%;
     height: 270px;
     background-color: black;
+}
+
+.contact-section h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.contact-section p{
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
